--- a/src/css/jjtimer.css
+++ b/src/css/jjtimer.css
@@ -1,3 +1,124 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   font-family: sans-serif;
+}
+
+a { color: #36c; }
+
+#content {
+  display: -webkit-flex;
+  display: flex;
+  height: 100%;
+  width: 100%; }
+
+#left {
+  height: 100%;
+  width: 70%;
+  overflow: hidden;
+  text-align: center;
+}
+
+#top {
+  height: 100%;
+  width: 100%;
+  padding: 0.5%;
+  box-sizing: border-box;
+}
+
+#options {
+  height: 100%;
+  padding: 1%;
+  text-align: left;
+  box-sizing: border-box;
+}
+
+#time {
+  transition: all 0.5s ease;
+  font-size: 1000%;
+  color: blue;
+  padding-top: 10%;
+}
+
+#scramble {
+  font-size: 200%;
+  text-align: justify;
+  width: 80%;
+  margin: auto;
+}
+
+#stats {
+  position: absolute;
+  bottom: 0;
+  padding: 1%;
+}
+
+#detail {
+  background-color: #eee;
+  border-bottom: 1px solid #ccc;padding: 1%;
+  box-sizing: border-box;
+  position: fixed;
+  width: 70%;
+  font-size: 1.5em;
+}
+
+.hide-detail {
+  transition: all 0.5s;
+  transform: translateY(-100%);
+  -webkit-transform: translateY(-100%);
+}
+
+.show-detail {
+  transition: all 0.5s;
+}
+
+.show {
+  transition: transform 0.5s;
+}
+
+.hide {
+  transition: transform 0.5s;
+  transform: translateY(-100%);
+}
+
+#right {
+  background-color: #eee;
+  height: 100%;
+  width: 30%;
+  box-shadow: inset 2px 0px 2px #ccc;
+  padding: 0.5%;
+  overflow-y: scroll;
+  box-sizing: border-box;
+}
+
+#right a {
+  text-decoration: none;
+}
+
+#session { font-size: 1.2em; }
+
+.running {
+  color: gray !important;
+}
+
+.running #stats {
+  display: none;
+}
+
+.running #right {
+  opacity: 0;
+  transition: all 1s;
+}
+
+.running #scramble {
+  opacity: 0;
+  transition: all 1s;
 }
