--- a/src/css/jjtimer.css
+++ b/src/css/jjtimer.css
@@ -44,7 +44,7 @@ a { color: #36c; }
 #time {
   transition: all 0.5s ease;
   font-size: 1000%;
-  color: blue;
+  color: black;
   padding-top: 10%;
 }
 
@@ -121,4 +121,8 @@ a { color: #36c; }
 .running #scramble {
   opacity: 0;
   transition: all 1s;
+}
+
+.disabled {
+  color: #ccc !important;
 }
