--- a/src/css/jjtimer.css
+++ b/src/css/jjtimer.css
@@ -18,7 +18,8 @@ a { color: #36c; }
   display: -webkit-flex;
   display: flex;
   height: 100%;
-  width: 100%; }
+  width: 100%;
+}
 
 #left {
   height: 100%;
@@ -44,7 +45,7 @@ a { color: #36c; }
 #time {
   transition: all 0.5s ease;
   font-size: 1000%;
-  color: black;
+  color: #36c;
   padding-top: 10%;
 }
 
@@ -103,7 +104,9 @@ a { color: #36c; }
   text-decoration: none;
 }
 
-#session { font-size: 1.2em; }
+#session {
+  font-size: 1.2em;
+}
 
 .running {
   color: gray !important;
