Remove href='javascript:;' and add cursor: pointer to get the same styling.

--- a/src/css/jjtimer.css
+++ b/src/css/jjtimer.css
@@ -12,7 +12,10 @@ body {
   font-family: sans-serif;
 }
 
-a { color: #36c; }
+a {
+  color: #36c;
+  cursor: pointer;
+}
 
 #content {
   display: -webkit-flex;
@@ -97,10 +100,6 @@ a { color: #36c; }
   box-sizing: border-box;
 }
 
-#right a {
-  text-decoration: none;
-}
-
 #session {
   font-size: 1.2em;
 }
@@ -113,6 +112,7 @@ a { color: #36c; }
 #session ul li {
   display: inline;
   color: #36c;
+  cursor: pointer;
 }
 
 #session ul li:before {
